# XiaomiAlbumSyncer

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  API_DOCUMENTATION.md  BUILD_AND_DEBUG.md  CLA.md  CLAUDE.md  CONTRIBUTING.md  DEVELOPER_GUIDE.md  Dockerfile  GIT_WORKFLOW.md  README.md  RELEASE_NOTE.md  compiler.md  config.json  debug.sh  docker-compose.yaml  docker-compose.yml  main.py  mutil_account.md  pyproject.toml  requirements.txt  sql.db  start-frontend.sh  start.sh  syncer_scheduler.py  tampermonkey.js  xiaomi_qr_login.py
.claude/skills/: github-release.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: api-e2e.yml  build.yml  builder.yml  cd.yml  docker-builder.yml  docker-builder.yml.disable  e2e.yml  native-image-compile.yml  (+3 more)
README/: expression-target-path.md  passkey-login.md  ssl-suppot.md
docker/: Dockerfile.base  Dockerfile.jvm  Dockerfile.native  Dockerfile.old
server/: README.md  TODO.md  build.gradle.kts  db  download  draft-reflect.json  pom.xml  pom.xml.old  reflect-config.old.json  settings.gradle.kts  xiaomialbumsyncer.db
src/: PersistentCookies.py  api.py  browser.py  configer.py  exiftool.py  manager.py  static.py  task.py
static/: banner.avif  copybydevtool.avif  democrontab.avif  fetchlastestalbums.avif  jump2xiaomiaccout.avif  manualtriggercrontab.avif  tampermonkey.js
web/: .prettierignore  CLAUDE.md  eslint.config.ts  index.html  package-lock.json  package.json  vite.config.ts
xas-mock/: Dockerfile  README.md  docker-compose.yml  go.mod
xiaomi-cloud-mock/: Dockerfile  README.md  docker-compose.yml  go.mod
(+389 files in other folders)
