[project]
name = "xiaomialbumsyncer"
version = "0.1.0"
description = "单向同步小米云服务中的相册照片到本地"
readme = "README.md"
requires-python = "==3.12.9"
dependencies = [
    "httpx==0.27.2",
    "inquirerpy==0.3.4",
    "rookiepy==0.5.6",
    "nest-asyncio==1.6.0",
    "peewee==3.17.8",
    "tqdm==4.67.0",
    "click==8.1.7",
    "piexif==1.1.3",
    "peewee-migrate==1.13.0",
    "micloud"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
